@@ -1,4 +1,5 @@
 3.0.15
+ * Add hint delivery metrics (CASSANDRA-12693)
  * Re-introduce off heap memtables (CASSANDRA-9472)
  * Faster write path (CASSANDRA-12269)
  * Change repair midpoint logging for tiny ranges (CASSANDRA-13603)
